--- a/db/conf.d/my.cnf
+++ b/db/conf.d/my.cnf
@@ -24,7 +24,7 @@ pid-file        = /var/run/mysqld/mysqld.pid
 socket          = /var/run/mysqld/mysqld.sock
 datadir         = /var/lib/mysql
 secure-file-priv= NULL
-# default_authentication_plugin=mysql_native_password
+default_authentication_plugin=mysql_native_password
 
 # Custom config should go here
 !includedir /etc/mysql/conf.d/
