--- a/db/conf.d/my.cnf
+++ b/db/conf.d/my.cnf
@@ -18,6 +18,8 @@
 #
 # For explanations see
 # http://dev.mysql.com/doc/mysql/en/server-system-variables.html
+[mysql]
+local-infile=1
 
 [mysqld]
 pid-file        = /var/run/mysqld/mysqld.pid
@@ -25,6 +27,7 @@ socket          = /var/run/mysqld/mysqld.sock
 datadir         = /var/lib/mysql
 secure-file-priv= NULL
 default_authentication_plugin=mysql_native_password
+local-infile=1
 
 # Custom config should go here
 !includedir /etc/mysql/conf.d/
